add edge metadata support